# noise-analyzer

./: .gitignore  .tool-versions  NoiseAnalyzer.py  QUICKSTART_SERVER.md  README.md  README_SERVER.md  RealTimeClassifier.py  SETUP_SUMMARY.md  VAD.py  convert_to_tflite.py  esp32_logger.py  extract_normalization.py  firebase-credentials-template.json  flask_server.py  main.py  model_params.npz  pyproject.toml  requirements_server.txt  test_client.py  test_firebase_connection.py  train.py
ESP32_NoiseMonitor/: CHANGELOG.md  ESP32_NoiseMonitor.ino  ISSUE_RESOLUTION.md  MICROPHONE_TROUBLESHOOTING.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_ESP32_CAM.md  WIRING_ESP32_CAM.md  WIRING_HW484.md  config.h  feature_extractor.cpp  feature_extractor.h  local_server.py  model_data.cpp  model_data.h  model_data.txt  model_inference.cpp  model_inference.h  model_normalization.h  script.py  test_server.py  vad.cpp  vad.h  wifi_manager.cpp  wifi_manager.h
ESP32_NoiseMonitor/models/: noise_classifier_quantized.tflite
app/: NoiseAnalyzer.py  RealTimeClassifier.py  VAD.py  main.py  train.py
app/models/: best_model.h5  model_params.npz  noise_classifier_model.h5
docs/: DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  WIRING_GUIDE.md
esp32_deployment/: normalization_params.json  validation_params.npz
esp32_noise_monitor/: platformio.ini  sdkconfig.h
esp32_noise_monitor/include/: audio_capture.h  config.h  feature_extractor.h  model_inference.h  model_normalization.h  vad.h
esp32_noise_monitor/src/: audio_capture.cpp  main.cpp  (+3 more)
models/: best_model.h5  noise_classifier_model.h5
(+10 files in other folders)
