[tool.poetry]
name = "noise-analyzer"
version = "0.1.0"
description = ""
authors = ["rzzdr <145427916+rzzdr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.4"
pandas = "^2.3.3"
librosa = "^0.11.0"
tensorflow = "^2.20.0"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"
sounddevice = "^0.5.3"
taskipy = "^1.14.1"
flask = "^3.1.2"
flask-cors = "^6.0.1"
firebase-admin = "^7.1.0"

[tool.taskipy.tasks]
app = "poetry run python3.11 flask_server.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
